--- a/lessonHider.html
+++ b/lessonHider.html
@@ -6,3 +6,4 @@
 <button ng-click="dayAlert({lesson: lesson, day: lessonDay})">click</button>
 
 <button ng-click="click()">cancel</button>
+<button ng-click="remove({index: index})">remove</button>
